--- a/DJANGO/requirements.txt
+++ b/DJANGO/requirements.txt
@@ -1,34 +1,34 @@
 asgiref==3.6.0
+async-timeout==4.0.2
 attrs==22.2.0
 autobahn==23.1.2
 Automat==22.10.0
 cffi==1.15.1
-channels==3.0.5
-channels-redis==3.4.1
-redis==4.4.0
-redis-server==6.0.9
-daphne==3.0.2
+channels==4.0.0
+channels-redis==4.0.0
 constantly==15.1.0
 cryptography==39.0.2
+daphne==4.0.0
 Django==3.2.13
 hyperlink==21.0.0
 idna==3.4
 incremental==22.10.0
-mysqlclient==2.1.1
-pip==20.2.3
+msgpack==1.0.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
 pyOpenSSL==23.0.0
 pytz==2022.7.1
+redis==4.5.1
 service-identity==21.1.0
-setuptools==49.2.1
 six==1.16.0
 sqlparse==0.4.3
-txaio==23.1.1
 Twisted==22.10.0
-typing-extensions==4.5.0
+txaio==23.1.1
+typing_extensions==4.5.0
+zope.interface==5.5.2
 gunicorn==20.1.0
-zope.interface==6.0
-django-environ
+mysql==0.0.3
+mysqlclient==2.1.1
 whitenoise
+virtualenv==20.17.1
