--- a/DJANGO/requirements.txt
+++ b/DJANGO/requirements.txt
@@ -9,11 +9,18 @@ channels-redis==4.0.0
 constantly==15.1.0
 cryptography==39.0.2
 daphne==4.0.0
+distlib==0.3.6
 Django==3.2.13
+django-cors-headers==3.13.0
+filelock==3.10.2
+gunicorn==20.1.0
 hyperlink==21.0.0
 idna==3.4
 incremental==22.10.0
 msgpack==1.0.4
+mysql==0.0.3
+mysqlclient==2.1.1
+platformdirs==2.6.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
@@ -26,9 +33,6 @@ sqlparse==0.4.3
 Twisted==22.10.0
 txaio==23.1.1
 typing_extensions==4.5.0
-zope.interface==5.5.2
-gunicorn==20.1.0
-mysql==0.0.3
-mysqlclient==2.1.1
-whitenoise
 virtualenv==20.17.1
+whitenoise==6.4.0
+zope.interface==5.5.2
