--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
   web:
     build: ./DJANGO
     container_name: main.django
-    command: daphne -b 0.0.0.0 -p 8000 mysite.asgi:application
+    command: daphne -b 0.0.0.0 -p 8000 Gotalk.asgi:application
     volumes:
       - ./DJANGO:/srv/code
     ports: 
